--- a/gb/25/11/5/n14630093.md
+++ b/gb/25/11/5/n14630093.md
@@ -21,7 +21,7 @@
 <h2>选民关注价格与负担能力</h2>
 <p>随着物价持续缓步上升、通胀问题顽固地持续存在，许多选民对不断上涨的成本和繁多的州税负担表达了不满。</p>
 <p>自称“民主社会主义者”的曼达尼，将“负担能力”与成本上升问题作为其纽约市长竞选的核心议题。</p>
-<p>在弗吉尼亚州，多名选民告诉《大纪元时报》，“负担能力”是他们的核心关切。</p>
+<p>在弗吉尼亚州，多名选民告诉《大纪元时报》，“负担能力”是他们的核心关切议题。</p>
 <figure id="attachment_14629773" aria-describedby="caption-attachment-14629773" style="width: 640px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/11/id14629773-GettyImages-2245055262.jpg"><img decoding="async" class="size-djy_1080 wp-image-14629773" src="https://i.epochtimes.com/assets/uploads/2025/11/id14629773-GettyImages-2245055262-1080x720.jpg" alt="2025年11月4日，弗吉尼亚州民主党候选人、前联邦众议员阿比盖尔?斯潘伯格（Abigail Spanberger）在开票之夜活动上发表演说。斯潘伯格已击败共和党候选人、副州长温瑟姆?厄尔—西尔斯（Winsome Earle-Sears），成为该州历史上首位女性州长。 (Alex Wong/Getty Images)" width="640" b="427" /></a><figcaption id="caption-attachment-14629773" class="wp-caption-text">2025年11月4日，弗吉尼亚州民主党候选人、前联邦众议员阿比盖尔?斯潘伯格（Abigail Spanberger）在开票之夜活动上发表演说。斯潘伯格已击败共和党候选人、副州长温瑟姆?厄尔-西尔斯（Winsome Earle-Sears），成为该州历史上首位女性州长。 (Alex Wong/Getty Images)</figcaption></figure>
 <p>支持民主党各级候选人的奥图姆?劳森（Autumn Lawson）说，她希望看到“弗吉尼亚的过度征税被停止”，并称州内居民在食品与车辆方面承受高税负。她将销售税形容为“被课了两次税”。</p>
 <p>另一位民主党选民西奥班（Siobhan）则表示，支持弗吉尼亚开征所得税而非销售税。</p>
@@ -61,33 +61,33 @@
 <p><em>原文：<ahref="https://www.theepochtimes.com/us/democrats-win-key-races-5-takeaways-from-election-day-2025-post-5939662?ea_src=frontpage&amp;ea_med=section-1">Democrats Win Key Races: 5 Takeaways From Election Day 2025</a>?刊登于英文《大纪元时报》。</em></p>
 <p>责任编辑：李琳#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630049.md#1">日本出动自卫队 应对创纪录熊害危机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630012.md#1">印度中部两列车相撞 造成至少11人丧生</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14629875.md#1">美军空袭东太平洋贩毒船 击毙两名恐怖分子</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/5/n14629880.md#1">组图：台风海鸥重创菲律宾 至少66死26失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/22/n10927236.md#1" target="_blank">共产暴政录：文革初北京昌平和大兴县大屠杀</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/21/n11203160.md#1" target="_blank">一位北京法轮功学员经历的4·25大上访</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/16/n10223963.md#1" target="_blank">“西单民主墙”前后的邓小平</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/24/n10424628.md#1" target="_blank">一位女商人的自白 她曾为自己准备葬礼</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14626955.md#1">“放下之后，你且看他” 读《过松源晨炊漆公店》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/29/n14625596.md#1">喜来登酒店女继承人分享家族企业成功的秘诀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/10/n14613873.md#1">人在画中游 是梦境还是仙境？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/30/n14626157.md#1">乐在其中的生命境界——解读陶渊明《五柳先生传》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/31/n14627235.md#1">把苦熬成甜 把山走成路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629550.md#1">【热点互动】九高官同落马 中共内斗深层原因？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628772.md#1">【直播】川普前往白宫 在空军一号与记者交谈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/23/n14377348.md#1">【品读唐诗】燕台一望 暗含忧国心</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628446.md#1">中共出台黄金税收新政 商家急下架金条</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628125.md#1">奥运跳水冠军全红婵退出全运会单人赛 引争议</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628140.md#1">今年最大超级月亮——“河狸月”将登场</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628907.md#1">赵露思推全新英语歌 获Lady GaGa班底助攻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627892.md#1">王祖贤与粉丝合照 曝昔日穿高跟鞋对戏男星秘辛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629668.md#1">范冰冰不避讳敏感话题 直指中国影坛弊端</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628867.md#1">39岁大陆男星李茂自曝：去年被亲戚骗光积蓄</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629626.md#1">唐嫣新剧遭撤档 传与王家卫录音档事件有关</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628313.md#1">香烤马铃薯料理 全家人都爱吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/3/n14628335.md#1">喝茶人必懂的六大茶类</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/4/n14629241.md#1">专家：日本人这个饮食习惯有助于减重</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628139.md#1">【美食天堂】泰式蟹肉炒饭～只需10分钟！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/2/n14628003.md#1">研究证实 每天获得拥抱的人比较不会忧郁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/11/5/n14630093.htm">民主党赢得2025年关键选战 一文看懂</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/11/5/n14630093.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
